--- a/style.css
+++ b/style.css
@@ -6,23 +6,35 @@
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
-  }
+}
   
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
    
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
   
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+/* Hide scrollbar but allow scrolling */
+@media (max-width: 768px) {
+  element-selector {
+      scrollbar-width: none; /* For Firefox */
+      -ms-overflow-style: none; /* For Internet Explorer and Edge */
   }
-  
+
+  element-selector::-webkit-scrollbar {
+      display: none; /* For Chrome, Safari, and Opera */
+  }
+}
+
 
 .topbar {
     background-color: #292828;
@@ -38,8 +50,8 @@
 }
 
 .topbar h2 {
-    margin: 16px;
-    font-size: 24px;
+    margin: 0.4em;
+    font-size: 1.5em;
 }
 
 .topbar_holder {
@@ -47,15 +59,15 @@
     flex: 1;
     justify-content: right;
     align-items: center;
-    margin-right: 4px;
+    margin-right: 0.4em;
 }
 
 .topbar_holder p {
     background-color: #424140;
-    margin: 4px;
-    padding: 8px;
-    border-radius: 15px;
-    font-size: 20px;
+    margin: 0.4em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    font-size: 1em;
 }
 
 .welcome {
