hide title on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,90 +1,96 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
-  
+
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
-   
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
 }
-  
+
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
 
 /* Hide scrollbar but allow scrolling */
 @media (max-width: 768px) {
-  element-selector {
-      scrollbar-width: none; /* For Firefox */
-      -ms-overflow-style: none; /* For Internet Explorer and Edge */
+  /* Hide the h2 on small screens */
+  .topbar h2 {
+    display: none;
   }
 
-  element-selector::-webkit-scrollbar {
-      display: none; /* For Chrome, Safari, and Opera */
+  /* Center align the p text in the .topbar_holder */
+  .topbar_holder p {
+    text-align: center; /* Center-align p */
+  }
+
+  /* Adjust topbar_holder to be centered on small screens */
+  .topbar_holder {
+    justify-content: center; /* Center-align the content */
+    margin-right: 0; /* Remove right margin for centering */
   }
 }
 
-
 .topbar {
-    background-color: #292828;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Cambria';
-    position: sticky;
-    width: 100%;
-    top: 0;
-    z-index: 1000;
+  background-color: #292828;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Cambria';
+  position: sticky;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
 }
 
 .topbar h2 {
-    margin: 0.4em;
-    font-size: 1.5em;
+  margin: 0.4em;
+  font-size: 1.5em;
+  display: flex;
+  flex: 1;
 }
 
 .topbar_holder {
-    display: flex;
-    flex: 1;
-    justify-content: right;
-    align-items: center;
-    margin-right: 0.4em;
+  display: flex;
+  justify-content: flex-end; /* Default to right-align on larger screens */
+  align-items: center;
 }
 
 .topbar_holder p {
-    background-color: #424140;
-    margin: 0.4em;
-    padding: 0.5em;
-    border-radius: 0.5em;
-    font-size: 1em;
+  background-color: #424140;
+  margin: 0.4em;
+  padding: 0.5em;
+  border-radius: 0.5em;
+  font-size: 1em;
 }
 
 .welcome {
-    background-color:#424140;
-    height:100dvh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-family: 'Cambria';
-    flex-direction: column;
-    text-align: center;
+  background-color: #424140;
+  height: 100dvh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-family: 'Cambria';
+  flex-direction: column;
+  text-align: center;
 }
 
 .about {
-    height: 100dvh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
