--- a/style.css
+++ b/style.css
@@ -1,96 +1,56 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
-/* Hide scrollbar but allow scrolling */
-@media (max-width: 768px) {
-  /* Hide the h2 on small screens */
-  .topbar h2 {
-    display: none;
-  }
-
-  /* Center align the p text in the .topbar_holder */
-  .topbar_holder p {
-    text-align: center; /* Center-align p */
-  }
-
-  /* Adjust topbar_holder to be centered on small screens */
-  .topbar_holder {
-    justify-content: center; /* Center-align the content */
-    margin-right: 0; /* Remove right margin for centering */
-  }
+  font-family: 'Cambria';
 }
 
 .topbar {
-  background-color: #292828;
+  background-color: #212529;
   color: white;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Cambria';
   position: sticky;
-  width: 100%;
   top: 0;
-  z-index: 1000;
 }
 
 .topbar h2 {
-  margin: 0.4em;
-  font-size: 1.5em;
-  display: flex;
   flex: 1;
+  font-size: 2rem;
 }
 
 .topbar_holder {
   display: flex;
-  justify-content: flex-end; /* Default to right-align on larger screens */
-  align-items: center;
+  font-size: 1.5rem;
+  justify-content: space-between;
 }
 
 .topbar_holder p {
-  background-color: #424140;
-  margin: 0.4em;
-  padding: 0.5em;
-  border-radius: 0.5em;
-  font-size: 1em;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .welcome {
-  background-color: #424140;
-  height: 100dvh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-color: #495057;
   color: white;
-  font-family: 'Cambria';
+  height: 90vh;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  padding: 1rem;
+}
+
+.welcome h2 {
+  font-size: 2rem
+}
+
+.welcome p {
+  font-size: 1.5rem;
 }
 
 .about {
-  height: 100dvh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 90vh;
 }
